--- a/wp-content/themes/floki-child/style.css
+++ b/wp-content/themes/floki-child/style.css
@@ -124,14 +124,7 @@ body a:visited, a {
 	width: 100%;
 }
 
-.portgriddw {
-	border-color: blue;
-	border-style: solid;
-	width: 33.3%;
-	height: 300px;
-	position: relative;
-	float: left;
-}
+
 
 body>footer {
 	padding-top: 0px;
@@ -222,6 +215,28 @@ video#bgvid {
     background-size: cover;
 }
 
+/* stuff for resizing grid on portfolio pages
+*/
+
+.portgriddw {
+text-align: center;
+display: inline-block;
+font-size:0;
+line-height: 0px;
+}
+
+
+.portgriddw li {
+		display: inline-block;
+		width: 33.333%;
+		text-align: left;
+}
+.portgriddw li img {
+	width: 100%;
+
+}
+
+
 @media screen and (max-device-width: 768px) {
   #mainheader {
 			background: url(http://douglaswelcome.com/wp-content/uploads/2016/06/goldengatebw.jpg) #000 no-repeat center center fixed;
@@ -234,9 +249,19 @@ video#bgvid {
 	 	width: 317px;
  		}
 
-	}
+		.portgriddw li {
+				width: 50%;
+
+			}
+
 
 	@media screen and (max-device-width: 477px) {
 		#mainheader {
 			height: 875px;
+	}
+
+	.portgriddw li {
+			width: 100%;
+
+		}
 	}
