--- a/wp-content/themes/floki-child/style.css
+++ b/wp-content/themes/floki-child/style.css
@@ -24,7 +24,6 @@ body {
 body strong {
  	color: #F15B66;
  	font-weight: 600;
- 	font-size: 20px;
  	display: inline;
 
  }
@@ -127,7 +126,54 @@ body a:visited, a {
 }
 
 .aboutdw {
-	background-image: url(/wp-content/uploads/2016/08/headshot.jpg);
+	width: 100%;
+	height: auto;
+	position: relative;
+	line-height: 0;
+}
+
+.aboutdw img {
+	width: 100%;
+	height: 100%;
+}
+
+.aboutcontainerdw {
+	width:57%;
+	height: 100%;
+	padding-left: 40px;
+	padding-top: 40px;
+	padding-bottom: 15%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	line-height: 1.5;
+	font-size: 19px;
+}
+
+
+.aboutbackgrounddw {
+	height: 100%;
+	width: 100%;
+	background: rgba(255, 248, 236, .6);
+	position: relative;
+	padding: 1px 25px 20px 25px;
+	border-radius: 15px;
+}
+
+
+.abouttextdw {
+	height: 100%;
+	width: 100%;
+	opacity: 1;
+	font-size: 1.4vw;
+}
+
+.mobileimg {
+	display: none;
+}
+
+.tabletimg {
+	display: none;
 }
 
 #nopostdw {
@@ -250,11 +296,19 @@ line-height: 0px;
 
 }
 
+@media screen and (max-device-width: 890px) {
+	.abouttextdw {
+		height: 100%;
+		width: 100%;
+		opacity: 1;
+		font-size: 1.3vw;
+	}
+
+}
 
 @media screen and (max-device-width: 768px) {
   #mainheader {
 			background: url(http://douglaswelcome.com/wp-content/uploads/2016/06/goldengatebw.jpg) #000 no-repeat center center fixed;
-
 		}
   #bgvid {
       display: none;
@@ -262,19 +316,102 @@ line-height: 0px;
  	#mobilecenterdw {
 	 	width: 317px;
  		}
+	.portgriddw li {
+		width: 50%;
+		}
+/* about page stuff */
 
-		.portgriddw li {
-				width: 50%;
+		.aboutdw img {
+			width: 100%;
+			height: 100%;
 
-			}
+		}
+
+		.aboutcontainerdw {
+			width:100%;
+			height: 100%;
+			padding-left: 40px;
+			padding-top: 40px;
+			padding-right: 40px;
+			padding-bottom: 140%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			line-height: 1.5;
+			font-size: 19px;
+		}
 
 
+		.aboutbackgrounddw {
+			height: 100%;
+			width: 100%;
+			background: rgba(255, 248, 236, .6);
+			position: relative;
+			padding: 20px 25px 20px 25px;
+			border-radius: 15px;
+		}
+
+
+		.abouttextdw {
+			height: 100%;
+			width: 100%;
+			opacity: 1;
+			font-size: 3.3vw;
+		}
+ .desktopimg {
+	 display: none;
+ }
+.tabletimg {
+	display: block;
+}
+
+@media screen and (max-device-width: 642px) {
+
+	.abouttextdw {
+		height: 100%;
+		width: 100%;
+		opacity: 1;
+		font-size: 3.1vw;
+	}
+
+
+@media screen and (max-device-width: 490px) {
+	.abouttextdw {
+		height: 100%;
+		width: 100%;
+		opacity: 1;
+		font-size: 3vw;
+	}
 	@media screen and (max-device-width: 477px) {
 		#mainheader {
 			height: 875px;
+	}
+
+	.tabletimg {
+		display: none;
+	}
+
+	.mobileimg {
+		display: block;
+	}
+
+	.abouttextdw {
+		height: 100%;
+		width: 100%;
+		opacity: 1;
+		font-size: 4.5vw;
 	}
 
 	.portgriddw li {
 			width: 100%;
 		}
 	}
+
+@media screen and (max-device-width: 390px) {
+	.abouttextdw {
+		height: 100%;
+		width: 100%;
+		opacity: 1;
+		font-size: 4.2vw;
+	}
+}
