--- a/wp-content/themes/floki-child/style.css
+++ b/wp-content/themes/floki-child/style.css
@@ -275,7 +275,7 @@ footer {
 	display: inline;
 }
 
-/* Portfolio Divs*/
+/* work page details */
 
 
 .portfoliowidthdw img {
@@ -289,10 +289,6 @@ footer {
 	margin-right: 5%;
 	margin-bottom: 5%;
 }
-
-
-
-/* work page details */
 
 .minicenterdivdw {
 	margin-left: auto;
@@ -315,7 +311,7 @@ table#treering {
 table#treering td {
 	border: 0;
 	background: none;
-	padding: 3px;
+	padding: 5px;
 }
 
 .flokipost a {
@@ -376,6 +372,7 @@ line-height: 0px;
 		display: inline-block;
 		width: 33.333%;
 		text-align: left;
+		margin: 20px;
 }
 
 
