--- a/wp-content/themes/floki-child/style.css
+++ b/wp-content/themes/floki-child/style.css
@@ -365,6 +365,7 @@ text-align: center;
 display: inline-block;
 font-size:0;
 line-height: 0px;
+padding: 0;
 }
 
 
@@ -478,12 +479,15 @@ line-height: 0px;
 }
 
 @media screen and (max-device-width: 768px) {
-  #mainheader {
-			background: url(http://douglaswelcome.com/wp-content/uploads/2016/06/goldengatebw.jpg) #000 no-repeat center center fixed;
-		}
-  #bgvid {
-      display: none;
-    }
+#mainheader {
+		background: url(http://douglaswelcome.com/wp-content/uploads/2016/06/goldengatebw.jpg) #000 no-repeat center center fixed;
+	}
+#bgvid {
+		display: none;
+	}
+}
+
+@media screen and (max-width: 768px) {
  	#mobilecenterdw {
 	 	width: 317px;
  		}
@@ -541,7 +545,7 @@ line-height: 0px;
 	}
 }
 
-@media screen and (max-device-width: 642px) {
+@media screen and (max-width: 642px) {
 
 	.abouttextdw {
 		height: 100%;
@@ -551,14 +555,14 @@ line-height: 0px;
 	}
 }
 
-@media screen and (max-device-width: 490px) {
+@media screen and (max-width: 490px) {
 	.abouttextdw {
 		height: 100%;
 		width: 100%;
 		opacity: 1;
 		font-size: 3vw;
 	}
-	@media screen and (max-device-width: 477px) {
+	@media screen and (max-width: 477px) {
 		#mainheader {
 			height: 875px;
 	}
@@ -583,7 +587,7 @@ line-height: 0px;
 		}
 	}
 
-@media screen and (max-device-width: 390px) {
+@media screen and (max-width: 390px) {
 	.abouttextdw {
 		height: 100%;
 		width: 100%;
@@ -592,7 +596,7 @@ line-height: 0px;
 	}
 }
 
-@media screen and (max-device-width: 357px) {
+@media screen and (max-width: 357px) {
 	section {
 		margin-bottom: 224px;
 	}
