drop contact box

--- a/wp-content/themes/floki-child/style.css
+++ b/wp-content/themes/floki-child/style.css
@@ -492,6 +492,7 @@ padding: 0;
 	}
 	.contactboxdw {
 			font-size: 3vw;
+			margin-top: 7%;
 	}
 
 	.buttondw {
@@ -589,6 +590,7 @@ padding: 0;
 
 .contactboxdw {
 		font-size: 4vw;
+			margin-top: 12%;
 }
 
 .buttondw {
@@ -630,6 +632,7 @@ padding: 0;
 
 	.contactboxdw {
 			font-size: 5vw;
+			margin-top: 15%;
 	}
 
 	.portgriddw li {
