--- a/wp-content/themes/floki-child/style.css
+++ b/wp-content/themes/floki-child/style.css
@@ -59,7 +59,7 @@ body strong {
 #mainheader {
 	float:inherit;
 	position:relative;
-	height: 750px;
+	height: 100vh;
 	background-color: rgba(0, 0, 0, 0.5);
 }
 #mainheader .text{
@@ -231,7 +231,7 @@ footer {
 /*contact details*/
 
 .contactbackgrounddw {
-	height: 950px;
+	height: 100vh;
 	background-image: url(/wp-content/uploads/2016/09/atmosphere2.jpg);
 	background-position: center;
 	background-size: cover;
@@ -614,9 +614,7 @@ padding: 0;
 	}
 }
 	@media screen and (max-width: 477px) {
-		#mainheader {
-			height: 875px;
-	}
+
 
 	.tabletimg {
 		display: none;
